...
                else { return }
            }

            contextLink = url
            let menu = NSMenu()
            menu.addItem(withTitle: "Open", action: #selector(openContextLink(_:)), keyEquivalent: "").target = self
            menu.addItem(withTitle: "Open in New Tab", action: #selector(openContextLinkInTab(_:)), keyEquivalent: "").target = self
            menu.addItem(.separator())
            menu.addItem(withTitle: "Copy Link Address", action: #selector(copyContextLink(_:)), keyEquivalent: "").target = self
            let menuPoint = NSPoint(
                x: webView.bounds.minX + x,
                y: webView.isFlipped ? webView.bounds.minY + y : webView.bounds.maxY - y
            )
...
